service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lnd-btcd-s
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: peer
    port: 9735
    targetPort: 9735
  selector:
    app: lnd-btcd
  type: LoadBalancer
